--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,22 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'Quicksand', sans-serif;
-
+  font-family: "Quicksand", sans-serif;
 }
-h1{
+body {
+  overflow-x: hidden;
+}
+html {
+  scroll-behavior: smooth;
+}
+h1 {
   font-size: 40px;
   font-weight: 500;
 }
-h2{
+h2 {
   font-size: 35px;
   font-weight: 600;
 }
-h3{
+h3 {
   font-size: 20px;
 }
